<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.ProfileEditingActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileEditToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <ScrollView
        android:id="@+id/profileEditScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profilePictureImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:clickable="true"
                android:contentDescription="@string/user_profile_picture"
                android:focusable="true"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profilePictureImageView"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameLabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profilePictureImageView"
                android:text="@string/foulen" />

            <TextView
                android:id="@+id/surnameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameValue"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profilePictureImageView"
                android:text="@string/surname"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/surnameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/surnameLabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profilePictureImageView"
                android:text="Fouleni" />

            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/surnameValue"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profilePictureImageView"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/usernameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameLabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profilePictureImageView"
                android:text="foulen99"
                android:textColor="#757575" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameValue"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profilePictureImageView"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/emailValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profilePictureImageView"
                android:text="email@example.com"
                android:textColor="#757575" />

            <TextView
                android:id="@+id/bioLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailValue"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/bio"
                android:textColor="#000000"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bioValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bioLabel"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:hint="@string/bio"
                android:minHeight="150dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/profileEditLinksLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bioValue"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/links"
                android:textColor="#000000"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/profileEditLinksWrapperLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/profileEditLinksLabel"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/profileEditLinksLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/external_link"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/external_link"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/external_link"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </LinearLayout>
                <Button
                    android:id="@+id/profileEditAddLinkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_link"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileEditLinksWrapperLayout"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/save" />


        </RelativeLayout>
    </ScrollView>


</LinearLayout>